Fix bug 309109: CWOP: Opening a document sets it to Modified

BUG: 309109